package Order;


public enum CleanType {
    SIMPLE, COMPLEJA
}
