package Robots;

public enum Surface
{
    PISOS,MUEBLES,ANY
}
